--- a/.eslintrc
+++ b/.eslintrc
@@ -7,12 +7,7 @@
     "es6": true,
     "node": true
   },
-  "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
-    },
-    "sourceType": "module"
-  },
+  "plugins": ["react", "jsx-a11y", "import"],
   "rules": {
     "comma-dangle": "off",
     "no-unused-vars": [
@@ -29,6 +24,5 @@
     "consistent-return": "off",
     "import/extensions": "off",
     "import/no-unresolved": "off"
-  },
-  "plugins": ["react", "jsx-a11y", "import"]
+  }
 }
