--- a/package.json
+++ b/package.json
@@ -11,18 +11,16 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint --ext=.jsx --ext=.js ./src/"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
     "eslint": "^4.16.0",
     "eslint-config-airbnb": "^16.1.0",
-    "eslint-config-prettier": "2.9.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-prettier": "2.5.0",
-    "eslint-plugin-react": "^7.5.1",
-    "prettier": "1.10.2",
-    "prettier-eslint": "^8.8.1"
+    "eslint-plugin-react": "^7.5.1"
   }
 }
