--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "eslint-config-react-app": "^5.0.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "^3.4.0"
@@ -21,6 +20,11 @@
       ">0.2%",
       "not dead",
       "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
     ]
   },
   "development": [
@@ -28,11 +32,5 @@
     "last 1 firefox version",
     "last 1 safari version"
   ],
-  "devDependencies": {
-    "eslint": "^5.16.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-prettier": "2.5.0",
-    "eslint-plugin-react": "^7.5.1"
-  }
+  "devDependencies": {}
 }
